--- a/RecipeApps/RecipeSystem/RecipeSystem.csproj
+++ b/RecipeApps/RecipeSystem/RecipeSystem.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0-windows</TargetFramework>
@@ -12,4 +12,4 @@
     <ProjectReference Include="..\..\..\CPUWindowsFormsFramework\CPUWindowsFormsFramework.csproj" />
   </ItemGroup>
 
-</Project>
+</Project> 
